# tf2-bfgs

./: LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
tests/: test_tensorflow_keras.py  test_tensorflow_normal.py  test_tensorflow_pinn.py
tf2_bfgs/: __init__.py  bfgs.py
