[tool.poetry]
name = "tf2-bfgs"
version = "0.1.0"
authors = ["Pi-Yueh Chuang <pychuang@gwu.edu>", "Matthieu Barreau <barreau@kth.se>"]
description = "Wrapper to train a tf.Module or tf.keras.Model using (L)BFGS optimizer from Tensorflow Probability"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
tensorflow = ">=2.0"
tensorflow-probability = ">=0.24"
numpy = ">=1.17"
tf-keras = ">=2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
