[tool.poetry]
name = "tf2-bfgs"
version = "0.1.0"
authors = ["Pi-Yueh Chuang <pychuang@gwu.edu>", "Matthieu Barreau <barreau@kth.se>"]
description = "Wrapper to train a tf.Module or tf.keras.Model using (L)BFGS optimizer from Tensorflow Probability"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
tensorflow = ">=2.10"
tensorflow-intel = { version = ">=2.10", platform = "win32" }
tensorflow-probability = ">=0.20"
numpy = ">=1.15"
tf-keras = ">=2.15.0"
keras = ">=3.0"

[tool.poetry.group.dev.dependencies]  
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
